implemented voters; updated routes; updated api doc
