# src/Controller/api/ItemController.php
@@ -3,20 +3,17 @@
 namespace App\Controller\api;
 
 use App\Services\UploadService;
+use App\Voter\ItemListVoter;
+use App\Voter\ItemVoter;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
-use Symfony\Component\HttpFoundation\File\File;
 use Symfony\Component\Routing\Annotation\Route;
 use App\Entity\Item;
 use App\Entity\ItemList;
-use App\Entity\User;
-use App\Exception\JsonHttpException;
 use App\Normalizer\ItemNormalizer;
-use App\Security\ApiAuthenticator;
 use App\Services\ValidateService;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\Serializer\Normalizer\AbstractNormalizer;
 use Symfony\Component\Serializer\SerializerInterface;
-use Symfony\Component\HttpFoundation\File\UploadedFile;
 
 class ItemController extends AbstractController
 {
@@ -41,9 +38,7 @@ class ItemController extends AbstractController
      */
     public function addAction(Request $request, ItemList $itemList)
     {
-        $user = $this->getDoctrine()->getRepository(User::class)->findOneByApiToken($request->headers->get(ApiAuthenticator::X_API_KEY));
-        if (!($itemList->getUser() === $user))
-            throw new JsonHttpException(400, "Bad request");
+        $this->denyAccessUnlessGranted(ItemListVoter::ADD_ITEM, $itemList);
 
         /* @var Item $item */
         $item = $this->serializer->deserialize($request->getContent(), Item::class, 'json');
@@ -56,25 +51,21 @@ class ItemController extends AbstractController
     }
 
     /**
-     * @Route("/api/lists/{id}/item/{item}", methods={"GET"}, name="api_item_show")
+     * @Route("/api/item/{item}", methods={"GET"}, name="api_item_show")
      */
-    public function showAction(Request $request, ItemList $itemList, Item $item)
+    public function showAction(Item $item)
     {
-        $user = $this->getDoctrine()->getRepository(User::class)->findOneByApiToken($request->headers->get(ApiAuthenticator::X_API_KEY));
-        if (!($itemList->getUser() === $user) || !($item->getItemList() === $itemList))
-            throw new JsonHttpException(400, "Bad request");
+        $this->denyAccessUnlessGranted(ItemVoter::VIEW, $item);
 
         return $this->json($item, 200, [], [AbstractNormalizer::GROUPS => [ItemNormalizer::GROUP_DETAILS]]);
     }
 
     /**
-     * @Route("/api/lists/{id}/item/{item}", methods={"DELETE"}, name="api_item_delete")
+     * @Route("/api/item/{item}", methods={"DELETE"}, name="api_item_delete")
      */
-    public function deleteAction(Request $request, ItemList $itemList, Item $item)
+    public function deleteAction(Item $item)
     {
-        $user = $this->getDoctrine()->getRepository(User::class)->findOneByApiToken($request->headers->get(ApiAuthenticator::X_API_KEY));
-        if (!($itemList->getUser() === $user) || !($item->getItemList() === $itemList))
-            throw new JsonHttpException(400, "Bad request");
+        $this->denyAccessUnlessGranted(ItemVoter::DELETE, $item);
 
         $this->getDoctrine()->getManager()->remove($item);
         $this->getDoctrine()->getManager()->flush();
@@ -83,13 +74,11 @@ class ItemController extends AbstractController
     }
 
     /**
-     * @Route("/api/lists/{id}/item/{item}", methods={"PUT"}, name="api_item_edit")
+     * @Route("/api/item/{item}", methods={"PUT"}, name="api_item_edit")
      */
-    public function editAction(Request $request, ItemList $itemList, Item $item)
+    public function editAction(Request $request, Item $item)
     {
-        $user = $this->getDoctrine()->getRepository(User::class)->findOneByApiToken($request->headers->get(ApiAuthenticator::X_API_KEY));
-        if (!($itemList->getUser() === $user) || !($item->getItemList() === $itemList))
-            throw new JsonHttpException(400, "Bad request");
+        $this->denyAccessUnlessGranted(ItemVoter::EDIT, $item);
 
         if ($request->query->has('isChecked')) {
             $item->setIsChecked($request->query->get('isChecked'));
@@ -100,13 +89,11 @@ class ItemController extends AbstractController
     }
 
     /**
-     * @Route("/api/lists/{id}/item/{item}/attachment", methods={"POST"}, name="api_item_attachment_add")
+     * @Route("/api/item/{item}/attachment", methods={"POST"}, name="api_item_attachment_add")
      */
-    public function setAttachmentAction(Request $request, ItemList $itemList, Item $item, UploadService $uploadService)
+    public function setAttachmentAction(Request $request, Item $item, UploadService $uploadService)
     {
-        $user = $this->getDoctrine()->getRepository(User::class)->findOneByApiToken($request->headers->get(ApiAuthenticator::X_API_KEY));
-        if (!($itemList->getUser() === $user) || !($item->getItemList() === $itemList))
-            throw new JsonHttpException(400, "Bad request");
+        $this->denyAccessUnlessGranted(ItemVoter::EDIT, $item);
 
         if ($request->files->count()) {
             $attachment = $uploadService->uploadAttachment($request->files->get("attachment"));
